Fixed header z-index position
Accidentally left the z-index from when the header had a separate
background image. Removed the z-index so that the header was actually
accessible instead of behind everything.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6235,7 +6235,6 @@ body {
   padding-right: 15px;
   padding-top: 50px;
   background-image: url(../images/earth-and-moon.jpg);
-  z-index: -1;
   background-size: cover;
   background-position: center center;
 }
